tests/snapshots/examples_fixtures/type_system__failing__87_hm_pattern_binding_constrained_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Int with String.

  --> examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:2:12
  |
2 |     let x: String = match Some(1) {
  |            ^^^^^^
  |            ------ expected Int, found String


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify String with Int.

  --> examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:2:21
  |
2 |     let x: String = match Some(1) {
  |                     ^^^^^^^^^^^^^^^
3 |         Some(v) -> v,
  | ^^^^^^^^^^^^^^^^^^^^^
4 |         None -> 0,
  | ^^^^^^^^^^^^^^^^^^
5 |     }
  | ^^^^^

Help:
  binding initializer does not match type annotation

Found 2 errors.
== stdout ==
<not executed>
